Added jwt and angular base layou

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Soosle;Trusted_Connection=True;"
+  },
+  "JWT": {
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
+
   }
 }
