Updated layout and implemented category delete

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "DefaultConnection": "Server=localhost;Database=Soosle;Trusted_Connection=True;"
   },
   "JWT": {
-    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
-
-  }
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+  "ImageFolder": "images"
 }
